--- a/style.css
+++ b/style.css
@@ -65,11 +65,33 @@ nav ul li a:hover::after{
     font-size: 30px;
 }
 .header-text h1{
-    font-size: 80px;
+    font-size: 40px;
     margin-top: 20px;
 }
 .header-text h1 span{
+    font-size: 80px;
     color: #ff004f;
+}
+.intro{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.header-text{
+    flex-basis: 60%;
+}
+.profile-picture{
+    flex-basis: 40%;
+    border-radius: 50%;
+    padding: 20px;
+    margin-top: 80px;
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(255,0,79,0.6));    
+}
+.profile-picture img{
+    border-radius: 50%;
+    width: 100%;
+    
 }
 /* --------------------about------------------ */
 #about{
@@ -316,6 +338,17 @@ nav .fa-solid{
     .contact-left, .contact-right{
         flex-basis: 100%;
     }
+    .profile-picture, .header-text{
+        flex-basis: 100%;
+        margin-top: 0;
+    }
+    .profile-picture{
+        margin-top: 20px;
+    }
+    nav h1{
+        font-size: 20px;
+    }
+    
 }
 
 #msg{
